<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/event_current_when"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/when_date"
            android:textSize="20sp"
            android:gravity="end|right"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:text="@string/event_current_where"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/where_location"
            android:textSize="20sp"
            android:gravity="end|right"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:text="# RSVP's"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rsvp_count"
            android:text="@string/zero"
            android:textSize="20sp"
            android:gravity="end|right"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:text="@string/deadline_to_rsvp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/deadline_to_rsvp"
            android:gravity="end|right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/rsvpButton"
        android:layout_marginTop="8dp"
        android:textColor="@color/tw__solid_white"
        android:background="@color/colorAccent"
        android:text="@string/rsvp_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>