<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/image_header"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_person"
            android:background="@color/colorAccent"
            android:layout_width="fill_parent"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/user_name"
            android:background="@color/colorAccent"
            android:textSize="25sp"
            android:textColor="@color/tw__solid_white"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/image_header"
        android:layout_gravity="bottom|right|end"
        />

    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:layout_weight="2"
            android:id="@+id/user_phone"
            android:text="@string/dummy_number"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" />
        <TextView
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginRight="8dp"
            android:gravity="right"
            android:layout_weight="2"
            android:id="@+id/user_email"
            android:text="@string/dummy_email"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>